--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         background: url('assets/background.jpg') no-repeat center center/cover;
         color: black;">
         <div>
-            <h1 style="font-size: 3rem; font-weight: bold;">Hi, I'm <span style="color: #ff4757;">Your Name</span></h1>
-            <p style="font-size: 1.2rem;">Creating elegant digital experiences.</p>
+            <h1 style="font-size: 3rem; font-weight: bold;">Hi, I'm <span style="color: #ff4757;">Alex</span></h1>
+            <p style="font-size: 1.2rem;">Engineer. Innovator. Problem Solver.</p>
             <a href="#projects" style="
                 display: inline-block;
                 padding: 10px 20px;
@@ -60,50 +60,19 @@
 
     <!-- About Section -->
     <section id="about" style="padding: 60px 20px; text-align: center;">
-        <img src="assets/profile.jpg" style="width: 150px; border-radius: 50%; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);" alt="Profile Picture">
         <h2 style="margin-top: 20px; font-weight: bold;">About Me</h2>
-        <p style="color: gray;">I design and build clean, accessible, and high-performance web experiences.</p>
+        <p>I design and build clean, accessible, and high-performance web experiences.</p>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" style="padding: 60px 20px; text-align: center; background: #f9f9f9;">
+    <section id="projects" style="padding: 60px 20px; text-align: center;">
         <h2 style="font-weight: bold;">Projects</h2>
         <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
             <div style="position: relative; width: 300px; cursor: pointer;">
-                <img src="assets/project1.jpg" style="width: 100%; border-radius: 10px; transition: transform 0.3s;" alt="Project 1">
-                <div style="
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    background: rgba(0, 0, 0, 0.5);
-                    color: white;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    opacity: 0;
-                    transition: opacity 0.3s;">
-                    <h3>Project One</h3>
-                </div>
+                <h3><a href="https://github.com/alexandergshaw/testing-site" target="_blank">Project One</a></h3>
             </div>
             <div style="position: relative; width: 300px; cursor: pointer;">
-                <img src="assets/project2.jpg" style="width: 100%; border-radius: 10px; transition: transform 0.3s;" alt="Project 2">
-                <div style="
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    background: rgba(0, 0, 0, 0.5);
-                    color: white;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    opacity: 0;
-                    transition: opacity 0.3s;">
-                    <h3>Project Two</h3>
-                </div>
+                <h3><a href="https://github.com/alexandergshaw/testing-site" target="_blank">Project Two</a></h3>
             </div>
         </div>
     </section>
@@ -112,13 +81,7 @@
     <section id="contact" style="padding: 60px 20px; text-align: center;">
         <h2 style="font-weight: bold;">Contact</h2>
         <p>Email: yourname@example.com</p>
-        <p>LinkedIn: <a href="#" style="color: black; text-decoration: none; font-weight: bold;">Your Profile</a></p>
     </section>
-
-    <!-- Footer -->
-    <footer style="text-align: center; padding: 20px 0; background: #f1f1f1;">
-        <p style="color: gray;">&copy; 2025 Your Name.</p>
-    </footer>
 
     <script>
         // Smooth scrolling
@@ -129,6 +92,5 @@
             });
         });
     </script>
-
 </body>
 </html>
