--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minimal Portfolio</title>
+    <title>Portfolio</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: sans-serif;
+        }
+
+        body {
+            background-color: #f9f9f9;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        section {
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2rem;
+            opacity: 0;
+            transform: translateY(40px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+        }
+
+        .visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    </style>
     <script defer src="script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    
 </head>
 <body style="margin: 0; font-family: Arial, sans-serif; transition: background 0.3s, color 0.3s;">
 
@@ -23,73 +56,91 @@
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         z-index: 1000;">
         <a href="#" style="font-size: 1.5rem; text-decoration: none; color: black; font-weight: bold;">Portfolio</a>
-        <nav style="margin-right: 50px">
+        <nav>
             <ul style="list-style: none; display: flex; gap: 20px; padding: 0; margin: 0;">
+                <li><a href="#home" style="text-decoration: none; color: black; font-weight: bold;">Home</a></li>
                 <li><a href="#about" style="text-decoration: none; color: black; font-weight: bold;">About</a></li>
                 <li><a href="#projects" style="text-decoration: none; color: black; font-weight: bold;">Projects</a></li>
-                <li><a href="#contact" style="text-decoration: none; color: black; font-weight: bold;">Contact</a></li>
+                <li> <a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="www.github.com" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </nav>
     </div>
 
     <!-- Hero Section -->
-    <section id="hero" style="
+    <section id="home" style="
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: center;
         text-align: center;
-        background: url('assets/background.jpg') no-repeat center center/cover;
         color: black;">
         <div>
-            <h1 style="font-size: 3rem; font-weight: bold;">Hi, I'm <span style="color: #ff4757;">Alex</span></h1>
+            <h1 style="font-size: 3rem; font-weight: bold;">Hi, I'm <span class="text-primary">Alex</span></h1>
             <p style="font-size: 1.2rem;">Engineer. Innovator. Problem Solver.</p>
             <a href="#projects" style="
                 display: inline-block;
                 padding: 10px 20px;
-                background: black;
-                color: white;
                 text-decoration: none;
                 font-weight: bold;
                 border-radius: 5px;
                 margin-top: 15px;">
-                View Work
+                <button class="btn btn-outline-primary">
+                    View Work
+                </button>
             </a>
         </div>
     </section>
 
     <!-- About Section -->
-    <section id="about" style="padding: 60px 20px; text-align: center;">
-        <h2 style="margin-top: 20px; font-weight: bold;">About Me</h2>
-        <p>I design and build clean, accessible, and high-performance web experiences.</p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" style="padding: 60px 20px; text-align: center;">
-        <h2 style="font-weight: bold;">Projects</h2>
-        <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
-            <div style="position: relative; width: 300px; cursor: pointer;">
-                <h3><a href="https://github.com/alexandergshaw/testing-site" target="_blank">Project One</a></h3>
-            </div>
-            <div style="position: relative; width: 300px; cursor: pointer;">
-                <h3><a href="https://github.com/alexandergshaw/testing-site" target="_blank">Project Two</a></h3>
-            </div>
+    <section id="about" style="
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: black;">
+        <div>
+            <h2 style="font-weight: bold;">About Me</h2>
+            <p style="padding: 10px 20px; font-size: 1.2rem;">I'm Alex—an engineer who builds clean, scalable software that just works. I streamline systems, craft intuitive UIs, and solve problems before they happen. Whether optimizing workflows, refining user experiences, or mentoring teams, I make tech faster, smarter, and smoother. Let’s build something great.</p>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" style="padding: 60px 20px; text-align: center;">
-        <h2 style="font-weight: bold;">Contact</h2>
-        <p>Email: yourname@example.com</p>
+    <!-- Projects Section -->
+    <section id="projects" style="
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: black;">
+        <div>
+            <h2 style="font-weight: bold;">Projects</h2>
+            <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
+                <div style="position: relative; width: 300px; cursor: pointer;">
+                    <a href="https://github.com/alexandergshaw/testing-site" target="_blank"><button class="btn btn-outline-primary">Project One</button></a>
+                </div>
+                <div style="position: relative; width: 300px; cursor: pointer;">
+                    <a href="https://github.com/alexandergshaw/testing-site" target="_blank"><button class="btn btn-outline-primary">Project Two</button></a>            
+                </div>
+            </div>        
+        </div>
     </section>
-
     <script>
-        // Smooth scrolling
-        document.querySelectorAll('a[href^="#"]').forEach(link => {
-            link.addEventListener('click', function(event) {
-                event.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' });
+        const sections = document.querySelectorAll("section");
+        const observer = new IntersectionObserver(entries => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add("visible");
+                } else {
+                    entry.target.classList.remove("visible");
+                }
             });
+        }, { threshold: 0.2 });
+
+        sections.forEach(section => {
+            observer.observe(section);
         });
     </script>
 </body>
