--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     
 </head>
-<body style="margin: 0; font-family: Arial, sans-serif; transition: background 0.3s, color 0.3s;">
+<body style="margin: 0 100px; font-family: Arial, sans-serif; transition: background 0.3s, color 0.3s;">
 
     <!-- Top Bar -->
     <div style="
