--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                 <li><a href="#home" style="text-decoration: none; color: black; font-weight: bold;">Home</a></li>
                 <li><a href="#about" style="text-decoration: none; color: black; font-weight: bold;">About</a></li>
                 <li><a href="#projects" style="text-decoration: none; color: black; font-weight: bold;">Projects</a></li>
-                <li><a href="alexandergshaw@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
-                <li><a href="www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li><a href="www.github.com" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="https://alexandergshaw@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
+                <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://www.github.com" target="_blank"><i class="fa-brands fa-github"></i></a></li>
             </ul>
         </nav>
     </div>
