--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         text-align: center;
         color: black;">
         <div>
-            <h1 style="font-size: 3rem; font-weight: bold;">Hi, I'm <span class="text-primary">Alex</span></h1>
-            <p style="font-size: 1.2rem;">Engineer. Innovator. Problem Solver.</p>
+            <h1 style="font-size: 3rem; font-weight: bold;">Hi, I'm <span class="text-primary">Tabitha</span></h1>
+            <p style="font-size: 1.2rem;">Student. Web Designer. Problem Solver.</p>
             <a href="#projects" style="
                 display: inline-block;
                 padding: 10px 20px;
@@ -103,7 +103,7 @@
         color: black;">
         <div>
             <h2 style="font-weight: bold;">About Me</h2>
-            <p style="padding: 10px 20px; font-size: 1.2rem;">I'm Alex—an engineer who builds clean, scalable software that just works. I streamline systems, craft intuitive UIs, and solve problems before they happen. Whether optimizing workflows, refining user experiences, or mentoring teams, I make tech faster, smarter, and smoother. Let’s build something great.</p>
+            <p style="padding: 10px 20px; font-size: 1.2rem;">I'm Tabitha—a web designer who builds clean, scalable code that just works. I create modern web and mobile apps. Whether optimizing workflows, refining user experiences, or mentoring teams, I make website UI smoother and innovative Let’s build something great.</p>
         </div>
     </section>
 
