--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
             <h2 style="font-weight: bold;">Projects</h2>
             <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
                 <div style="position: relative; width: 300px; cursor: pointer;">
-                    <a href="https://github.com/alexandergshaw/testing-site" target="_blank"><button class="btn btn-outline-primary">Project One</button></a>
+                    <a href="https://github.com/trrodenboughmcc?tab=repositories" target="_blank"><button class="btn btn-outline-primary">GitHub Repositories</button></a>
                 </div>
                 <div style="position: relative; width: 300px; cursor: pointer;">
-                    <a href="https://github.com/alexandergshaw/testing-site" target="_blank"><button class="btn btn-outline-primary">Project Two</button></a>            
+                    <a href="www.linkedin.com/in/tabitha-galvan-sd95" target="_blank"><button class="btn btn-outline-primary">LinkedIn</button></a>            
                 </div>
             </div>        
         </div>
